# goclone

./: .gitignore  Cargo.toml  README.md  go.mod  goclone.toml  main.go
src/: db.rs  main.rs  rclone.rs  util.rs
src/cmd/: add.rs  check.rs  copy.rs  list.rs  mod.rs
