[package]
name = "goclone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.29", features = ["derive"] }
enum_dispatch = "0.3.8"
lazy_static = "1.4.0"
serde = { version = "1.0.150", features = ["derive"] }
toml_edit = {version = "0.17", features=["easy"]}
